
    Added xml::node::set_text_content() for setting unescaped textual
    content.

    Added xml::exception class, derived from std::runtime_error. Xmlwrapp
    will throw only this or derived exception, with the exception of
    std::bad_alloc(), which is still thrown when appropriate.

    Fixed compilation with Sun Studio compiler.

Version 0.6.2

    Fixed xml::tree_parser to fail on non-fatal parser errors.

    Added XMLWRAPP_CHECK_VERSION macro.

Version 0.6.1

    Added Visual C++ 200x projects and fixed VC6 project.

    Fixed xml::event_parser::parse_stream() to return false on empty
    input (Michael Grundberg, #2787836).

    Converted test suite to Boost Test.

    Fixed xslt::stylesheet::apply() to detect and report errors.

Version 0.6.0

    Fixed libxmlwrapp to not depend on libxslt if XSLT support
    is enabled (Vadim Zeitlin, #1927398).

    Ported Unix build system to Autotools.

    Split pkg-config file xmlwrapp.pc into xmlwrapp.pc and
    xsltwrapp.pc. Applications that use libxsltwrapp need to be
    updated to use the latter (too).

    Input document to xslt::stylesheet::apply() is now passed as
    const reference instead of non-const one.

    It is no longer necessary to instantiate xml/xslt::init object before
    using the library; this is now done automatically (thread safety is
    preserved) and new code shouldn't do it. Moreover, creating multiple
    xml/xslt::init object instances is now possible and doesn't result in
    multiple initialization/shutdown of the library.

    Configuration methods of xml/xslt::init classes are now static.

    The previously separate manual was merged with Doxygen documentation so
    that all documentation is available in single place. As a consequence,
    PDF version of the manual is no longer provided, use HTML documentation
    included with xmlwrapp source distribution.

    Added xml::node::get_namespace() function.
